--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
             display: flex;
             align-items: center;
             gap: 0.5rem;
-            text-decoration: none;
+            border: none;
+            cursor: pointer;
             transition: all 0.3s ease;
             box-shadow: 0 4px 12px rgba(46, 196, 255, 0.3);
         }
@@ -143,6 +144,184 @@
         @keyframes pulse {
             0%, 100% { opacity: 1; }
             50% { opacity: 0.3; }
+        }
+
+        /* Modal Overlay */
+        .modal-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.8);
+            backdrop-filter: blur(8px);
+            display: none;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+            animation: fadeIn 0.3s ease;
+        }
+
+        .modal-overlay.active {
+            display: flex;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+
+        .modal-content {
+            background: linear-gradient(135deg, #1a3a4a 0%, #0f2237 100%);
+            border: 2px solid rgba(46, 196, 255, 0.3);
+            border-radius: 20px;
+            padding: 2.5rem;
+            max-width: 600px;
+            width: 90%;
+            max-height: 90vh;
+            overflow-y: auto;
+            position: relative;
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.6);
+            animation: slideUp 0.4s ease;
+        }
+
+        @keyframes slideUp {
+            from {
+                transform: translateY(50px);
+                opacity: 0;
+            }
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
+
+        .modal-close {
+            position: absolute;
+            top: 1rem;
+            right: 1rem;
+            background: rgba(255, 255, 255, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            color: rgba(255, 255, 255, 0.8);
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            font-size: 1.2rem;
+            transition: all 0.3s ease;
+        }
+
+        .modal-close:hover {
+            background: rgba(255, 84, 89, 0.2);
+            border-color: #ff5459;
+            color: #ff5459;
+            transform: rotate(90deg);
+        }
+
+        .modal-icon {
+            width: 100px;
+            height: 100px;
+            margin: 0 auto 1.5rem;
+            animation: float 3s ease-in-out infinite;
+        }
+
+        .modal-badge {
+            display: inline-flex;
+            align-items: center;
+            gap: 0.5rem;
+            background: rgba(255, 165, 0, 0.15);
+            border: 1px solid rgba(255, 165, 0, 0.4);
+            color: #ffa500;
+            padding: 0.5rem 1rem;
+            border-radius: 20px;
+            font-size: 0.85rem;
+            font-weight: 600;
+            margin-bottom: 1.5rem;
+        }
+
+        .pulse-dot {
+            width: 8px;
+            height: 8px;
+            background: #ffa500;
+            border-radius: 50%;
+            animation: pulse 2s infinite;
+        }
+
+        .modal-title {
+            color: #2ec4ff;
+            font-size: 1.8rem;
+            font-weight: 700;
+            margin-bottom: 0.75rem;
+            background: linear-gradient(135deg, #2ec4ff, #1bb4ea);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+        }
+
+        .modal-subtitle {
+            color: rgba(255, 255, 255, 0.9);
+            font-size: 1.1rem;
+            margin-bottom: 1.5rem;
+            font-weight: 500;
+        }
+
+        .modal-text {
+            color: rgba(255, 255, 255, 0.7);
+            font-size: 0.95rem;
+            line-height: 1.6;
+            margin-bottom: 1.5rem;
+        }
+
+        .modal-features {
+            background: rgba(46, 196, 255, 0.05);
+            border: 1px solid rgba(46, 196, 255, 0.15);
+            border-radius: 12px;
+            padding: 1.25rem;
+            margin-bottom: 1.5rem;
+        }
+
+        .modal-features h3 {
+            color: #2ec4ff;
+            font-size: 1rem;
+            margin-bottom: 1rem;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+
+        .feature-item {
+            display: flex;
+            align-items: flex-start;
+            gap: 0.75rem;
+            margin-bottom: 0.75rem;
+            color: rgba(255, 255, 255, 0.7);
+            font-size: 0.9rem;
+        }
+
+        .feature-item:last-child {
+            margin-bottom: 0;
+        }
+
+        .feature-item i {
+            color: #2ec4ff;
+            margin-top: 0.25rem;
+            flex-shrink: 0;
+        }
+
+        .modal-footer {
+            margin-top: 1.5rem;
+            padding-top: 1.5rem;
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+            color: rgba(255, 255, 255, 0.5);
+            font-size: 0.85rem;
+            text-align: center;
         }
 
         main {
@@ -428,6 +607,20 @@
                 width: 100%;
                 justify-content: center;
             }
+
+            .modal-content {
+                padding: 2rem 1.5rem;
+                width: 95%;
+            }
+
+            .modal-title {
+                font-size: 1.5rem;
+            }
+
+            .modal-icon {
+                width: 80px;
+                height: 80px;
+            }
         }
     </style>
 </head>
@@ -454,10 +647,10 @@
                 </div>
             </div>
             <div class="header-actions">
-                <a href="/maintenance.html" class="classifier-btn">
+                <button class="classifier-btn" onclick="openModal()">
                     <i class="fas fa-camera"></i>
                     Classificador de Bioincrustação
-                </a>
+                </button>
                 <div class="team-number">
                     <i class="fas fa-users"></i> Equipe 374
                 </div>
@@ -468,6 +661,77 @@
             </div>
         </div>
     </header>
+
+    <!-- Modal Overlay -->
+    <div class="modal-overlay" id="classifierModal" onclick="closeModalOnBackdrop(event)">
+        <div class="modal-content">
+            <button class="modal-close" onclick="closeModal()">
+                <i class="fas fa-times"></i>
+            </button>
+
+            <div style="text-align: center;">
+                <svg class="modal-icon" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                    <defs>
+                        <linearGradient id="modalGradient" x1="0%" y1="0%" x2="100%" y2="100%">
+                            <stop offset="0%" style="stop-color:#2ec4ff;stop-opacity:1" />
+                            <stop offset="100%" style="stop-color:#1bb4ea;stop-opacity:1" />
+                        </linearGradient>
+                    </defs>
+                    <circle cx="50" cy="50" r="45" fill="url(#modalGradient)" opacity="0.2"/>
+                    <path d="M50,20 L50,50 M50,50 L65,65" stroke="url(#modalGradient)" stroke-width="4" stroke-linecap="round"/>
+                    <circle cx="50" cy="50" r="40" stroke="url(#modalGradient)" stroke-width="3" fill="none"/>
+                    <path d="M30,80 Q50,75 70,80" stroke="url(#modalGradient)" stroke-width="2" fill="none"/>
+                </svg>
+
+                <div class="modal-badge">
+                    <span class="pulse-dot"></span>
+                    <span>Em Desenvolvimento</span>
+                </div>
+
+                <h2 class="modal-title">Classificador de Bioincrustação</h2>
+                <h3 class="modal-subtitle">🛠️ Funcionalidade em Desenvolvimento</h3>
+
+                <p class="modal-text">
+                    O <strong>Classificador Automático de Bioincrustação por Imagem</strong> está sendo 
+                    finalizado pela equipe 374. Esta funcionalidade permite identificar o nível de 
+                    bioincrustação a partir de uma foto do casco da embarcação.
+                </p>
+
+                <div class="modal-features">
+                    <h3>
+                        <i class="fas fa-robot"></i>
+                        Recursos em Desenvolvimento:
+                    </h3>
+                    <div class="feature-item">
+                        <i class="fas fa-check-circle"></i>
+                        <span><strong>Upload de Imagens:</strong> Envie fotos do casco para análise instantânea</span>
+                    </div>
+                    <div class="feature-item">
+                        <i class="fas fa-check-circle"></i>
+                        <span><strong>IA de Classificação:</strong> Identificação automática do nível de bioincrustação (0-4)</span>
+                    </div>
+                    <div class="feature-item">
+                        <i class="fas fa-check-circle"></i>
+                        <span><strong>Validação Cruzada:</strong> Confirma dados do modelo preditivo</span>
+                    </div>
+                    <div class="feature-item">
+                        <i class="fas fa-check-circle"></i>
+                        <span><strong>Histórico de Análises:</strong> Acompanhe a evolução ao longo do tempo</span>
+                    </div>
+                </div>
+
+                <p class="modal-text">
+                    <strong>🚀 Previsão de Lançamento:</strong> Fase 2 do Projeto<br>
+                    Por enquanto, utilize o <strong>Dashboard Power BI</strong> para acompanhar as 
+                    análises e recomendações de manutenção.
+                </p>
+
+                <div class="modal-footer">
+                    <i class="fas fa-envelope"></i> Dúvidas? Entre em contato: <strong>albertomateus9@yahoo.com</strong>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <main>
         <!-- Dashboard Power BI - PRINCIPAL -->
@@ -609,6 +873,7 @@
 
                 <!-- Membro 5 -->
                 <div class="team-card">
+                    <div class="team-card">
                     <div class="team-member-name">Julio Cezar Araújo Santos</div>
                     <div class="team-member-role">Business / Designer</div>
                     <div class="team-member-contact">
@@ -658,6 +923,32 @@
                 document.exitFullscreen();
             }
         }
+
+        // Modal functions
+        function openModal() {
+            const modal = document.getElementById('classifierModal');
+            modal.classList.add('active');
+            document.body.style.overflow = 'hidden';
+        }
+
+        function closeModal() {
+            const modal = document.getElementById('classifierModal');
+            modal.classList.remove('active');
+            document.body.style.overflow = 'auto';
+        }
+
+        function closeModalOnBackdrop(event) {
+            if (event.target.classList.contains('modal-overlay')) {
+                closeModal();
+            }
+        }
+
+        // Close modal with ESC key
+        document.addEventListener('keydown', function(event) {
+            if (event.key === 'Escape') {
+                closeModal();
+            }
+        });
 
         // Auto-hide loading após 5 segundos (fallback)
         setTimeout(() => hideLoading('loading-dashboard'), 5000);
